namespace MoneyTracking.Domain;

// An enum is a fixed set of named choices — safer than using strings or booleans
public enum ItemType
{
    Income,
    Expense
}
