namespace MoneyTracking.Domain;

// Limits sort choices to the three fields the spec requires
public enum SortField
{
    Month,
    Amount,
    Title
}
